--- a/MultiplayerGame/MultiplayerGame/MultiplayerGame.csproj
+++ b/MultiplayerGame/MultiplayerGame/MultiplayerGame.csproj
@@ -41,7 +41,7 @@
   <PropertyGroup />
   <ItemGroup>
     <Compile Include="Game1.cs" />
-    <Compile Include="NetworkConnection.cs" />
+    <Compile Include="Manager\ManagerNetwork.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
