--- a/MultiplayerGame/MultiplayerGameLibrary/MultiplayerGameLibrary.csproj
+++ b/MultiplayerGame/MultiplayerGameLibrary/MultiplayerGameLibrary.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Data.cs" />
     <Compile Include="NetworkLoginInformation.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
