--- a/MultiplayerGame/MultiplayerGame/MultiplayerGame.csproj
+++ b/MultiplayerGame/MultiplayerGame/MultiplayerGame.csproj
@@ -40,6 +40,7 @@
   </PropertyGroup>
   <PropertyGroup />
   <ItemGroup>
+    <Compile Include="Client.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Manager\ManagerNetwork.cs" />
     <Compile Include="Program.cs" />
