Tried to implement time

--- a/MultiplayerGame/MultiplayerGameServer/MultiplayerGameServer.csproj
+++ b/MultiplayerGame/MultiplayerGameServer/MultiplayerGameServer.csproj
@@ -35,6 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Lidgren.Network, Version=3.7.1.189, Culture=neutral, processorArchitecture=MSIL" />
+    <Reference Include="MonoGame.Framework, Version=3.7.1.189, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
