--- a/MultiplayerGame/MultiplayerGame/MultiplayerGame.csproj
+++ b/MultiplayerGame/MultiplayerGame/MultiplayerGame.csproj
@@ -40,10 +40,13 @@
   </PropertyGroup>
   <PropertyGroup />
   <ItemGroup>
+    <Compile Include="Blob.cs" />
+    <Compile Include="Body.cs" />
     <Compile Include="Camera2D.cs" />
     <Compile Include="ClientOld.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Primitives2D.cs" />
     <Compile Include="References\ManagerNetwork.cs" />
     <Compile Include="Program.cs" />
