A bunch of fixing, but need to fix a weird bug, use link in description
https://techdigger.wordpress.com/2007/12/22/deserializing-data-into-a-dynamically-loaded-assembly/

--- a/MultiplayerGame/MultiplayerGameLibrary/MultiplayerGameLibrary.csproj
+++ b/MultiplayerGame/MultiplayerGameLibrary/MultiplayerGameLibrary.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Body.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="MessageManager.cs" />
+    <Compile Include="OldServerProgram.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Primitives2D.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
